# src/modules/match-requests/dto/match-without-confirm.dto.ts
@@ -1,0 +1,8 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsUUID } from 'class-validator';
+
+export class MatchWithoutConfirmDto {
+    @ApiProperty({ example: 'a1b2c3d4-e5f6-7890-abcd-ef1234567890' })
+    @IsUUID()
+    toUserId: string;
+}
